--- a/templates/mobile.html
+++ b/templates/mobile.html
@@ -60,12 +60,64 @@
         <div class="row">
             <div class="jumbotron jumbotron-fluid col-md-12">
                 <div class="container">
-                    <h1 class="display-3"> Passwords </h1>
+                    <h1 class="display-3"> Mobile Security </h1>
                     <h4 class="lead"> Introduction or description of the module for people to read before they actually do it. </h4>
                 </div>
             </div>
         </div>
-        
+
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1 container-fluid">
+                <div class="card card-block">
+                  <h3 id="complexity" class="card-title"> Intro </h3>
+                </div>
+                <div class="card card-block">
+                  <h5>Side Loading Apps</h5>
+                  <p>
+                    Smartphones allow you to install applications from third party
+                     sources (somewhere other than the app store) through a process
+                     called “side loading”. Third-party apps are attractive because
+                     they offer more variety than what the app store can provide.
+                     Since these applications are not screened by the app store, it
+                     is possible for app developers to embed malware into their application.
+                  </p>
+                  <p>For more information check out this <a href="https://blog.malwarebytes.com/cybercrime/2014/04/sideloading-apps-is-a-dangerous-game/
+">link.</a></p>
+                </div>
+                <div class="card card-block">
+                  <h5>App Permissions</h5>
+                  <p>
+                    When installing an app you are presented with the types of
+                    permissions that the app requires. These permissions can include
+                     things such as gathering your location information, modifying your
+                     contacts, permission to send SMS messages on your behalf, etc.
+                     Make sure that the required permissions make sense. Research apps
+                     that exhibit suspicious permissions to verify legitimacy.
+                  </p>
+                </div>
+                <div class="card card-block">
+                  <h5>Unsecured Wifi</h5>
+                  <p>
+                    Unprotected Wifi networks, particularly in public places, can be dangerous.
+                    This is because you are connecting without knowing who else could be on the network.
+                     A malicious person can capture information, including credentials as they travel
+                     across the network.
+                  </p>
+                  <p>
+                    These sorts of attacks are mostly useful for harvesting
+                     unencrypted credentials, but just because a connection is
+                     encrypted does not necessarily mean it is safe.
+                  </p>
+                  <p>
+                    There are dedicated devices that attackers can
+                    use to setup rogue access points for the sole purpose of harvesting
+                    information: <a href="https://www.wifipineapple.com/">https://www.wifipineapple.com/</a>.
+                  </p>
+                  <iframe width="420" height="315" src="https://www.youtube.com/embed/T6j0dLZkXsA" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+
 
     </div>
 
