--- a/templates/socialengresults.html
+++ b/templates/socialengresults.html
@@ -227,7 +227,7 @@
                             </p>
                          </div>
                          {% else %}
-                         <h1>No data found</h1>
+                         <p>No data found. This doesn't mean that you don't have public information on the internet, just that our specific program can't find any.</p>
                          {% endfor %}
                       </div>
                    </div>
