--- a/templates/index.html
+++ b/templates/index.html
@@ -37,8 +37,8 @@
                 <div class="pull-xs-right">
                     <a class="nav-item nav-link" href="{{ url_for('passwords') }}"> Passwords </a>
                     <a class="nav-item nav-link" href="{{ url_for('social_eng') }}"> Social Engineering </a>
-                    <a class="nav-item nav-link" href="{{ url_for('index') }}"> Browser Security </a>
-                    <a class="nav-item nav-link" href="{{ url_for('index') }}"> Mobile Security </a>
+                    <a class="nav-item nav-link" href="{{ url_for('browser') }}"> Browser Security </a>
+                    <a class="nav-item nav-link" href="{{ url_for('mobile') }}"> Mobile Security </a>
                 </div>
 
             </nav>
@@ -97,7 +97,7 @@
                     </div>
 
                     <div id="bs-card" class="card card-link transition">
-                        <a href="{{ url_for('index') }}">
+                        <a href="{{ url_for('browser') }}">
                             <img class="card-img-top" src="static/images/image.svg" width="100%"></img>
 
                             <div class="card-block transition">
@@ -110,7 +110,7 @@
                     </div>
 
                     <div id="ms-card" class="card card-link transition">
-                        <a href="{{ url_for('index') }}">
+                        <a href="{{ url_for('mobile') }}">
                             <img class="card-img-top" src="static/images/image.svg" width="100%"></img>
 
                             <div class="card-block transition">
