--- a/templates/passwords-quiz.html
+++ b/templates/passwords-quiz.html
@@ -37,8 +37,8 @@
                 <div class="pull-xs-right">
                     <a class="nav-item nav-link active" href="{{ url_for('passwords') }}"> Passwords </a>
                     <a class="nav-item nav-link" href="{{ url_for('social_eng') }}"> Social Engineering </a>
-                    <a class="nav-item nav-link" href="{{ url_for('index') }}"> Browser Security </a>
-                    <a class="nav-item nav-link" href="{{ url_for('index') }}"> Mobile Security </a>
+                    <a class="nav-item nav-link" href="{{ url_for('browser') }}"> Browser Security </a>
+                    <a class="nav-item nav-link" href="{{ url_for('mobile') }}"> Mobile Security </a>
                 </div>
 
             </nav>
