--- a/templates/socialeng.html
+++ b/templates/socialeng.html
@@ -37,8 +37,8 @@
                 <div class="pull-xs-right">
                     <a class="nav-item nav-link" href="{{ url_for('passwords') }}"> Passwords </a>
                     <a class="nav-item nav-link active" href="{{ url_for('social_eng') }}"> Social Engineering </a>
-                    <a class="nav-item nav-link" href="{{ url_for('index') }}"> Browser Security </a>
-                    <a class="nav-item nav-link" href="{{ url_for('index') }}"> Mobile Security </a>
+                    <a class="nav-item nav-link" href="{{ url_for('browser') }}"> Browser Security </a>
+                    <a class="nav-item nav-link" href="{{ url_for('mobile') }}"> Mobile Security </a>
                 </div>
 
             </nav>
@@ -191,7 +191,7 @@
 
 
                 <div class="card card-block no-border">
-                    <a id="se-button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('index') }}" role="button"> Start a new module! </a>
+                    <a id="p-button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('social_engineering_quiz') }}" role="button"> Take the quiz! </a>
                 </div>
 
 
