--- a/templates/socialengineering-quiz.html
+++ b/templates/socialengineering-quiz.html
@@ -35,10 +35,10 @@
                 </div>
 
                 <div class="pull-xs-right">
-                    <a class="nav-item nav-link active" href="{{ url_for('passwords') }}"> Passwords </a>
-                    <a class="nav-item nav-link" href="{{ url_for('social_eng') }}"> Social Engineering </a>
-                    <a class="nav-item nav-link" href="{{ url_for('index') }}"> Browser Security </a>
-                    <a class="nav-item nav-link" href="{{ url_for('index') }}"> Mobile Security </a>
+                    <a class="nav-item nav-link" href="{{ url_for('passwords') }}"> Passwords </a>
+                    <a class="nav-item nav-link active" href="{{ url_for('social_eng') }}"> Social Engineering </a>
+                    <a class="nav-item nav-link" href="{{ url_for('browser') }}"> Browser Security </a>
+                    <a class="nav-item nav-link" href="{{ url_for('mobile') }}"> Mobile Security </a>
                 </div>
 
             </nav>
@@ -60,7 +60,7 @@
         <div class="row">
             <div class="jumbotron jumbotron-fluid col-md-12">
                 <div class="container">
-                    <h1 class="display-3"> Passwords Quiz </h1>
+                    <h1 class="display-3"> Social Engineering Quiz </h1>
                     <h4 class="lead"> Test your knowledge with a quiz! </h4>
                 </div>
             </div>
