--- a/templates/browser.html
+++ b/templates/browser.html
@@ -60,7 +60,7 @@
         <div class="row">
             <div class="jumbotron jumbotron-fluid col-md-12">
                 <div class="container">
-                    <h1 class="display-3"> Mobile Security </h1>
+                    <h1 class="display-3"> Browser Security </h1>
                     <h4 class="lead"> Introduction or description of the module for people to read before they actually do it. </h4>
                 </div>
             </div>
