--- a/templates/passwords-quiz.html
+++ b/templates/passwords-quiz.html
@@ -72,38 +72,38 @@
                 </div>
 
                 <div class="card card-block">
-                    <h5> 1. This is a question? </h5>
+                    <h5> 1. Which of these passwords is stronger? </h5>
 
                     <div class="form-check">
                       <label class="form-check-label">
                         <input class="form-check-input" type="radio" name="question1" id="q1a1" value="option1">
-                        First answer.
+                        HeLLoThere
                       </label>
                     </div>
 
                     <div class="form-check">
                       <label class="form-check-label">
                         <input class="form-check-input" type="radio" name="question1" id="q1a1" value="option2">
-                        Second answer.
+                        H3110Th3r3
                       </label>
                     </div>
 
                     <hr>
                     <hr>
 
-                    <h5> 2. This is also a question? </h5>
+                    <h5> 2. Which of these is a safe practice? </h5>
 
                     <div class="form-check">
                       <label class="form-check-label">
                         <input class="form-check-input" type="radio" name="question2" id="q2a1" value="option1">
-                        First answer.
+                        Change the default password on your router
                       </label>
                     </div>
 
                     <div class="form-check">
                       <label class="form-check-label">
                         <input class="form-check-input" type="radio" name="question2" id="q2a2" value="option2">
-                        Second answer.
+                        Leave the default password the same so that it can be easily found if forgotten.
                       </label>
                     </div>
                 </div>
