--- a/templates/passwords.html
+++ b/templates/passwords.html
@@ -201,7 +201,7 @@
                         <li> Attackers can easily obtain default passwords and identify internet-connected target systems. </li>
                     </ul>
 
-                    <p> To see a list of default passwords, click&nbsp;<a href="http://www.defaultpassword.com/"><b>here</b></a>.</p>
+                    <p> To see a list of default passwords, look here <a href="http://www.defaultpassword.com/">http://www.defaultpassword.com/</a>.</p>
 
                     <div class="embed-responsive m-y-2">
                         <p> Here is one incident that highlights the potential risks of using default passwords. </p>
