--- a/templates/mobile-quiz.html
+++ b/templates/mobile-quiz.html
@@ -68,44 +68,45 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1 container-fluid">
                 <div class="card card-block no-border">
-                    <a id="p-button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('passwords') }}" role="button"> I'm not ready! Take me back to the module! </a>
+                    <a id="p-button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('mobile') }}" role="button"> I'm not ready! Take me back to the module! </a>
                 </div>
 
                 <div class="card card-block">
-                    <h5> 1. This is a question? </h5>
+                    <h5> 1. Which​ ​of​ ​these​ is true about smartphones? </h5>
 
                     <div class="form-check">
                       <label class="form-check-label">
                         <input class="form-check-input" type="radio" name="question1" id="q1a1" value="option1">
-                        First answer.
+                        Smartphones do not need antivirus software
                       </label>
                     </div>
 
                     <div class="form-check">
                       <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="question1" id="q1a1" value="option2">
-                        Second answer.
-                      </label>
-                    </div>
-
-                    <hr>
-                    <hr>
-
-                    <h5> 2. This is also a question? </h5>
-
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="question2" id="q2a1" value="option1">
-                        First answer.
+                        <input class="form-check-input" type="radio" name="question1" id="q1a2" value="option2">
+                        Phishing on smartphones is not viable for an attacker
                       </label>
                     </div>
 
                     <div class="form-check">
                       <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="question2" id="q2a2" value="option2">
-                        Second answer.
+                        <input class="form-check-input" type="radio" name="question1" id="q1a3" value="option3">
+                        Both of the above
                       </label>
                     </div>
+
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input class="form-check-input" type="radio" name="question1" id="q1a4" value="option4">
+                        None of the above
+                      </label>
+                    </div>
+
+
+
+
+
+
                 </div>
 
                 <div class="card card-block no-border">
