--- a/templates/browser.html
+++ b/templates/browser.html
@@ -70,7 +70,12 @@
             <div class="col-md-10 col-md-offset-1 container-fluid">
 
 
-
+              <div class="card card-block">
+                <h5>Gif Test</h5>
+                <div class="img-container" style="display: block; margin: auto; width: 70%;">
+                <img src="static/images/cookies.gif"  style="width:819px; height:460px;">
+                </div>
+              </div>
 
                 <div class="card card-block no-border">
                     <a id="bs-button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('browser_quiz') }}" role="button"> Take the quiz! </a>
