--- a/templates/socialengresults.html
+++ b/templates/socialengresults.html
@@ -23,11 +23,11 @@
 
     <style>
        #card_div {
-       width: 330px;
-       height: 200px;
-       margin: 5px;
-       margin-left:10px;
-       padding: 5px;
+       width: 31.3%;
+       height: 220px;
+       margin: 1%;
+       margin-left:1%;
+       padding: 1%;
        overflow-y: scroll;
        float:left;
        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
