added vihncents updates

--- a/templates/browser.html
+++ b/templates/browser.html
@@ -22,28 +22,18 @@
         <![endif]-->
 </head>
 
-<body>
-    <header class="navbar navbar-right navbar-full navbar-light" role="banner">
-        <div class="clearfix">
-            <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2"> &#9776; </button>
-        </div>
-        <div class="collapse navbar-toggleable-xs" id="bd-main-nav">
-            <nav class="nav navbar-nav">
-
-                <div class="pull-xs-left">
-                    <a class="nav-item nav-link" href="{{ url_for('index') }}"> Home </a>
-                </div>
-
-                <div class="pull-xs-right">
-                    <a class="nav-item nav-link" href="{{ url_for('passwords') }}"> Passwords </a>
-                    <a class="nav-item nav-link" href="{{ url_for('social_eng') }}"> Social Engineering </a>
-                    <a class="nav-item nav-link active" href="{{ url_for('browser') }}"> Browser Security </a>
-                    <a class="nav-item nav-link" href="{{ url_for('mobile') }}"> Mobile Security </a>
-                </div>
-
-            </nav>
-        </div>
-    </header>
+<body data-spy="scroll" data-target="#sidebar">
+  <header class="navbar navbar-right navbar-full navbar-light" role="banner">
+      <div class="clearfix">
+          <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2"> &#9776; </button>
+      </div>
+      <div class="collapse navbar-toggleable-xs" id="bd-main-nav">
+          <nav class="nav navbar-nav">
+              <div class="pull-xs-left"> <a class="nav-item nav-link" href="{{ url_for('index') }}"> Home </a> </div>
+              <div class="pull-xs-right"> <a class="nav-item nav-link" href="{{ url_for('passwords') }}"> Passwords </a> <a class="nav-item nav-link" href="{{ url_for('social_eng') }}"> Social Engineering </a> <a class="nav-item nav-link active" href="{{ url_for('browser') }}"> Browser Security </a> <a class="nav-item nav-link" href="{{ url_for('mobile') }}"> Mobile Security </a> </div>
+          </nav>
+      </div>
+  </header>
 
     <div class="container-fluid hidden-md-up p-x-0">
         <div class="row m-t-2">
@@ -67,30 +57,145 @@
         </div>
 
         <div class="row">
-            <div class="col-md-10 col-md-offset-1 container-fluid">
-
-
-              <div class="card card-block">
-                <h5>Gif Test</h5>
-                <div class="img-container" style="display: block; margin: auto; width: 70%;">
-                <img src="static/images/cookies.gif"  style="width:819px; height:460px;">
-                </div>
-              </div>
-
-                <div class="card card-block no-border">
-                    <a id="bs-button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('browser_quiz') }}" role="button"> Take the quiz! </a>
+            <div class="container">
+                <div id="content-container" class="row">
+                    <div class="col-md-2">
+                        <div id="sidebar">
+                            <nav>
+                                <ul id="sidebar-links" class="nav nav-pills nav-stacked">
+                                    <li class="nav-item"> <a class="nav-link" href="#cookies"> Cookies </a> </li>
+                                    <hr>
+                                    <li class="nav-item"> <a class="nav-link" href="#plugins"> Plug-Ins </a> </li>
+                                    <hr>
+                                    <li class="nav-item"> <a class="nav-link" href="#popups"> Pop-Ups </a> </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                    <div id="content" class="col-md-10">
+                        <div class="card card-block">
+                            <h3 id="cookies" class="card-title"> Cookies </h3>
+                            <hr>
+                            <h5> What is a cookie? </h5>
+                            <ul>
+                                <li> A text file that stores data on your computer. </li>
+                                <li> It was invented to remember information about the user, in an attempt to personalize websites. </li>
+                                <li> Cookies can store saved passwords, track your browsing patterns. </li>
+                            </ul>
+                            <h5> What do cookies do? </h5>
+                            <ul>
+                                <li> Have you ever noticed ads shown on your Facebook page consistently match your recent Google searches or purchases from Amazon? </li>
+                                <li> Cookies can be used to track what you buy or search in order to customize your advertising, in the hopes that you buy similar products. </li>
+                                <li> They can also store information, such Amazon using cookies to store products that you've shown interest into a "shopping cart." </li>
+                            </ul>
+                            <h5> How can you protect yourself? </h5>
+                            <ul>
+                                <li> You can configure your browser settings to allow cookies only from sites you trust and disable from sites you don't. </li>
+                                <li> Follow the instructions specific to your browser below to configure cookies for specific sites. </li>
+                            </ul>
+                            <hr>
+                            <div class="card text-xs-center"> </div>
+                        </div>
+                        <div class="card card-block">
+                            <h4 id="plugins" class="card-title"> Plug-Ins </h4>
+                            <hr>
+                            <h5> What is a plug-in? </h5>
+                            <ul>
+                                <li> Applications intended for use in the web browser such as Adobe Flash. </li>
+                                <li> Plug-Ins are programs, and such, are vulnerable to many of the same problems, including being poorly written or written with malicious intentions. </li>
+                                <li> Vulnerabilities in plug-ins can also allow attackers to install malware. </li>
+                            </ul>
+                            <h5> How can you protect yourself? </h5>
+                            <ul>
+                                <li> Only install plug-ins from official sources, such as the Chrome Web Store or Firefox Addons. </li>
+                                <li> Be aware that while plug-ins from official sources are safer than third-party installations, they are not completely safe. </li>
+                                <li> Never install an unknown plug-in. </li>
+                            </ul>
+                            <hr>
+                            <div class="card text-xs-center">
+                                <ul class="nav nav-tabs" role="tablist">
+                                    <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#chrome-plugins" role="tab">Chrome</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#firefox-plugins" role="tab">Firefox</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#ie-plugins" role="tab">Internet Explorer</a> </li>
+                                </ul>
+                                <!-- Tab panes -->
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="chrome-plugins" role="tabpanel">
+                                        <img width="75%" src="static/images/chrome-extensions.gif">
+                                    </div>
+                                    <div class="tab-pane" id="firefox-plugins" role="tabpanel">
+                                        <img width="75%" src="static/images/firefox-extensions.gif">
+                                    </div>
+                                    <div class="tab-pane" id="ie-plugins" role="tabpanel">
+                                        <img width="75%" src="static/images/ie-extensions.gif">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card card-block">
+                            <h4 id="popups" class="card-title"> Pop-Ups </h4>
+                            <hr>
+                            <h5> What is a pop-up? </h5>
+                            <ul>
+                                <li> Pop-ups are small windows that are automatically opened when you visit a page. </li>
+                                <li> Most pop-ups are advertisements. </li>
+                                <li> Pop-ups can lead to unintentional downloads or take you to sites you don't mean to go to. </li>
+                                <li> Some pop-ups are 'chained,' making it difficult for you to close them, as they open another one as soon as they are closed. </li>
+                            </ul>
+                            <h5> How can you protect yourself? </h5>
+                            <ul>
+                                <li> By default, most browsers block pop-ups. </li>
+                                <li> If, for some reason, you turn off your pop-up blocker, remember to turn it back on! </li>
+                                <li> Follow the instructions specific to your browser below to configure cookies for specific sites. </li>
+                            </ul>
+                            <hr>
+                            <div class="card text-xs-center">
+                                <ul class="nav nav-tabs" role="tablist">
+                                    <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#chrome-popups" role="tab">Chrome</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#firefox-popups" role="tab">Firefox</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#ie-popups" role="tab">Internet Explorer</a> </li>
+                                </ul>
+                                <!-- Tab panes -->
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="chrome-popups" role="tabpanel">
+                                        <img width="75%" src="static/images/popup.gif">
+                                    </div>
+                                    <div class="tab-pane" id="firefox-popups" role="tabpanel">
+                                        <p> Nothing here yet. </p>
+                                    </div>
+                                    <div class="tab-pane" id="ie-popups" role="tabpanel">
+                                        <p> Nor here. </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card card-block no-border"> <a id="p-button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('browser_quiz') }}" role="button"> Take the quiz! </a> </div>
+                    </div>
                 </div>
             </div>
         </div>
-
-
     </div>
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="static/js/csam.js"></script>
     <script src="static/js/passwordCracker.js"></script>
-    <script src="static/js/dictionaryLookup.js"></script>
-</body>
-
-</html>
+    <script src="static/js/jquery.scrollTo.min.js"></script>
+    <script src="static/js/util.js"></script>
+    <script src="static/js/scrollspy.js"></script>
+    <script src="static/js/tab.js"></script>
+    <script>
+        $('body').scrollspy({
+            target: '#sidebar'
+            , offset: ($(window).height() * .20)
+        });
+        $(document).ready(function () {
+            $('#sidebar-links > li > a[href^="#"]').click(function(e) {
+                e.preventDefault();
+                $(window).stop(true).scrollTo(this.hash, {
+                    duration: 700
+                    , interrupt: true
+                    , offset: -50
+                    , easing: "swing"
+                });
+            });
+        });
+    </script>
